--- a/PostService/src/main/resources/application.properties
+++ b/PostService/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=PostService
 server.port=8000
 
+server.servlet.context-path=/posts
+
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/postDB
 spring.datasource.username=root
