--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -68,6 +68,12 @@
             <version>0.12.6</version>
             <scope>runtime</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
