Added login flow

--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -23,3 +23,6 @@ management.endpoint.health.show-details=always
 # Logging Configuration
 logging.level.org.springframework=INFO
 logging.level.com.sayan.linkedin=DEBUG
+
+
+jwt.secretKey = aghsdjbxcjhskajkndubcujnszkasjomn
