Added Discovery service for service discovery. Added ApiGateway for routing and security , added Connection service. Set up neo4j graph db to m,aintain connections between users

--- a/PostService/src/main/resources/application.properties
+++ b/PostService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=PostService
+spring.application.name=post-service
 server.port=8000
 
 server.servlet.context-path=/posts
@@ -15,10 +15,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Actuator Configuration
-management.endpoints.web.exposure.include=health,info,metrics
-management.endpoint.health.show-details=always
 
-# Logging Configuration
-logging.level.org.springframework=INFO
-logging.level.com.sayan.linkedin=DEBUG
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+
+## Actuator Configuration
+#management.endpoints.web.exposure.include=health,info,metrics
+#management.endpoint.health.show-details=always
+#
+## Logging Configuration
+#logging.level.org.springframework=INFO
+#logging.level.com.sayan.linkedin=DEBUG
