--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=UserService
+spring.application.name=user-service
 
 server.port = 8001
 server.servlet.context-path= /users
@@ -26,3 +26,5 @@ logging.level.com.sayan.linkedin=DEBUG
 
 
 jwt.secretKey = aghsdjbxcjhskajkndubcujnszkasjomn
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
