--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -3,6 +3,7 @@ eureka:
   client:
     service-url.
       defaultZone:http://localhost:8761/eureka
+jwt.secretKey: aghsdjbxcjhskajkndubcujnszkasjomn
 
 
 spring:
@@ -15,6 +16,7 @@ spring:
             - Path=/api/v1/posts/**
           filters:
             - StripPrefix = 2
+            - name: AuthenticationFilter
 
         - id: user-service
           uri: lb://USER-SERVICE
@@ -28,6 +30,7 @@ spring:
             - Path=/api/v1/connections/**
           filters:
             - StripPrefix=2
+            - name: AuthenticationFilter
   application:
     name: api-gateway
 
