--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -1,12 +1,24 @@
 
 eureka:
   client:
-    service-url.
-      defaultZone:http://localhost:8761/eureka
-jwt.secretKey: aghsdjbxcjhskajkndubcujnszkasjomn
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+logging:
+  level:
+    org.springframework.cloud.gateway: DEBUG
+    reactor.netty.http.client: DEBUG
+
+server:
+  port: 2000
+
+jwt:
+  secretKey: aghsdjbxcjhskajkndubcujnszkasjomn
 
 
 spring:
+  main:
+    web-application-type: reactive
   cloud:
     gateway:
       routes:
@@ -15,7 +27,7 @@ spring:
           predicates:
             - Path=/api/v1/posts/**
           filters:
-            - StripPrefix = 2
+            - StripPrefix=2
             - name: AuthenticationFilter
 
         - id: user-service
